Commit antes de implementar entidad 'AVAILABILITY'
